hampir final
